# bevy_pixel_perfect_zoom

./: Cargo.toml  LICENSE.md  README.md
assets/shaders/: zoom.wgsl
src/: lib.rs
