[package]
name = "bevy_pixel_perfect_zoom"
version = "0.1.0"
edition = "2021"
description = "Pixel perfect zoom post-processing shader"
keywords = ["shaders","2d", "bevy", "wgsl"]
categories = ["shaders","2d", "bevy", "wgsl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
]}
